--- a/front_centro_imagem/package.json
+++ b/front_centro_imagem/package.json
@@ -21,6 +21,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
