--- a/front_centro_imagem/package.json
+++ b/front_centro_imagem/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.141",
     "@mui/material": "^5.14.6",
+    "@mui/x-date-pickers": "^6.12.0",
+    "@react-spring/web": "^9.7.3",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
