--- a/front_centro_imagem/package.json
+++ b/front_centro_imagem/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
