--- a/front_centro_imagem/package.json
+++ b/front_centro_imagem/package.json
@@ -28,6 +28,7 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.5",
     "styled-components": "^6.0.7",
     "typescript": "5.2.2",
     "uuid": "^9.0.0"
