--- a/front_centro_imagem/package.json
+++ b/front_centro_imagem/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "next": "13.4.19",
     "nookies": "^2.5.2",
     "react": "18.2.0",
@@ -31,7 +33,8 @@
     "sharp": "^0.32.5",
     "styled-components": "^6.0.7",
     "typescript": "5.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2"
